# XaxaML

XaxaML/: .ocamlformat  Makefile
XaxaML/lib/: ast.ml  dune  inferencer.ml  inferencer.mli  parser.ml  parser.mli  pprint.ml  pprint.mli  typedtree.ml  typedtree.mli
XaxaML/lib/expr_tests/: infer_tests.ml  parser_tests.ml  parser_tests.mli
XaxaML/lib/tests/: parser_tests.ml  parser_tests.mli
XaxaML/tests/: dune  parser_tests.t  run_infer.ml  run_parser.ml
